Fixed the same text overflow issue in buttons and list items. Also, removed most of the direct child operator because this could easily break the styles, for instance by adding an element in the middle

--- a/Styles/moobile.css
+++ b/Styles/moobile.css
@@ -445,10 +445,6 @@ input, select, textarea {
 	    -ms-box-flex: 1;                                         /* Important */
 	     -o-box-flex: 1;                                         /* Important */
 	        box-flex: 1;                                         /* Important */
-	display: block;                                              /* Important */
-	overflow: hidden;                                            /* Important */
-	text-overflow: ellipsis;                                     /* Important */
-	white-space: nowrap;                                         /* Important */
 }
 
 .button.is-selected {}
@@ -603,7 +599,7 @@ input, select, textarea {
 	position: relative;                                          /* Important */
 }
 
-.list-item > .list-item-image {
+.list-item .list-item-image {
 	-webkit-box-sizing: border-box;                              /* Important */
 	   -moz-box-sizing: border-box;                              /* Important */
 	    -ms-box-sizing: border-box;                              /* Important */
@@ -617,7 +613,7 @@ input, select, textarea {
 	display: block;                                              /* Important */
 }
 
-.list-item > .list-item-label {
+.list-item .list-item-label {
 	-webkit-box-sizing: border-box;                              /* Important */
 	   -moz-box-sizing: border-box;                              /* Important */
 	    -ms-box-sizing: border-box;                              /* Important */
@@ -630,7 +626,7 @@ input, select, textarea {
 	        box-flex: 1;                                         /* Important */
 }
 
-.list-item > .list-item-detail {
+.list-item .list-item-detail {
 	-webkit-box-sizing: border-box;                              /* Important */
 	   -moz-box-sizing: border-box;                              /* Important */
 	    -ms-box-sizing: border-box;                              /* Important */
